Frontend.Mvc/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: frontend
  name: frontend-svc
spec:
  selector:
    app: frontend-label
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
